# code-graph-mcp

./: .compose.env  .coverage  .dockerignore  .gitignore  .graphignore  .graphignore.example  .mcp.json  .ruff.toml  CHANGELOG.md  COMPOSE_QUICK_REF.md  CRUSH.md  CURRENT_STATE.md  DEPLOY_NOW.md  DIRECTORY_TRAVERSAL_OPTIMIZATION.md  Dockerfile  GETTING_STARTED.md  GHCR_INFRASTRUCTURE_OVERVIEW.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MCP_COMPLIANCE_FIX.md  MCP_REBUILD_COMPLETE.md  MCP_TOOLS_TEST_REPORT.md  MCP_TOOLS_TEST_RESULTS.md  MIGRATION_TO_CODENAV.md  Makefile  PHASE_2_COMPLETE.md  PLANNING.md  README.md  RELEASE_SUMMARY.md  REPOSITORY_RENAME_GUIDE.md  REVISED_UI_UX_PLAN.md  SESSION2_FINAL_ANALYSIS.md  SESSION3_FINAL_INDEX.md  SESSION4_SUMMARY.md  SESSION_19_TEST_INFRASTRUCTURE.md  SESSION_20_COMPLETION.md  SESSION_5_COMPLETION.md  SESSION_5_FINAL.md  SESSION_5_SUMMARY.txt  SESSION_6_FINAL.md  (+32 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
.github/agents/: README.md  backend-engineer.md  code-reviewer.md  coding-standards.md  devops-engineer.md  documentation-agent.md  frontend-engineer.md  kanban-manager.md  qa-engineer.md  solution-architect.md  sprint-planner.md  team-coordinator.md
.github/workflows/: copilot-setup-steps.yml  deploy-pages.yml  docker-publish.yml  docs.yml  test.yml
.goose/memory/: code-graph-mcp-fixes.txt  code-graph-mcp-zero-nodes.txt  docker-compose-troubleshooting.txt  mcp_patterns.txt
docs/: ADR_TEMPLATE.md  FRONTEND_DEPLOYMENT.md  GRAPH_DATABASE_EVALUATION.md  GRAPH_VISUALIZATION_PLAN.md  LOCATION.md  PLAYWRIGHT_TESTING_GUIDE.md  README.md  TESTING_GUIDE.md  frontend-enhancement-plan.md  index.md
docs/archive/: AST_GREP_FIX_SUMMARY.md  AST_GREP_INVESTIGATION_OCT26.md  BUILD_AND_DEPLOY.md  COMPREHENSIVE_UI_UX_PLAN.md  DEPLOY_NOW.md  DIRECTORY_TRAVERSAL_OPTIMIZATION.md  FINAL_STATUS.md  FIX_SUMMARY.md  FIX_ZERO_NODES_ISSUE.md  GOOSE.md  IGNORE_PATTERNS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  ITERATOR_BUG_FIX.md  MASTER_SUMMARY.md  MCP_COMPLIANCE_FIX.md  MCP_REBUILD_COMPLETE.md  PHASE_3_TESTING_COMPLETE.md  QUICK_REFERENCE.md  QUICK_REF_SEAMS.md  READY_COMMANDS.md  REFACTORING_PLAN.md  REVISED_UI_UX_PLAN.md  ROADMAP_SESSION_4.md  ROADMAP_SESSION_5.md  SESSION2_FINAL_ANALYSIS.md  SESSION3_COMPREHENSIVE_SUMMARY.md  SESSION3_FINAL_INDEX.md  SESSION4_CHECKLIST.md  SESSION4_QUICK_START.md  SESSION4_SUMMARY.md  SESSION_4_COMPLETION.md  SESSION_5_COMPLETION.md  SESSION_5_FINAL.md  SESSION_5_RESOLUTION.md  SESSION_5_SUMMARY.txt  SESSION_6_FINAL.md  SESSION_6_SUMMARY.md  SESSION_7_COMPLETION.md  SESSION_PLAN_MULTI_LANGUAGE.md  (+5 more)
docs/guides/: CODESPACES_INFRASTRUCTURE.md  CODESPACES_TROUBLESHOOTING.md  FRONTEND_ENHANCEMENT.md  GETTING_STARTED.md  PLAYWRIGHT_TESTING_GUIDE.md  REDESIGN_PROPOSAL.md  SETUP_CHECKLIST.md  TESTING_GUIDE.md  TEST_INFRASTRUCTURE.md
docs/sessions/: INDEX.md  PHASE_2_ROADMAP.md  README.md  SESSION_13_COMPLETION.md  SESSION_13_PLAN.md  SESSION_14_REALTIME_DEPLOYMENT.md  SESSION_15_COMPLETION.md  SESSION_16_DEPLOYMENT_READINESS.md  SESSION_18_COMPLETION.md  SESSION_18_WEBSOCKET_OPTIMIZATION.md  SESSION_19_MEMGRAPH_INTEGRATION.md  SESSION_1_REST_API.md  SESSION_2_FRONTEND.md  SESSION_8_ZERO_NODES_FIX.md  SESSION_9_FORCE_GRAPH_IMPLEMENTATION.md  SESSION_LOG.md  session-template.md
docs/specs/: BACKEND_HOSTING_GUIDE.md  DEPLOYMENT_GUIDE.md  DOTNET_INTEGRATION.md  ENTRY_POINT_DISCOVERY.md  FRONTEND_DEPLOYMENT.md  GHCR_INFRASTRUCTURE_OVERVIEW.md  GHCR_QUICK_REF.md  MCP_AGENT_INTEGRATION.md  OBSERVABILITY_STACK.md  WORKBENCH_SPRINT_TICKETS.md  WORKBENCH_VIEW_DESIGN.md
docs/supporting/: REDIS.md  SSE.md
frontend/: .dockerignore  .env.example  .env.local-to-deployed  .gitignore  DEV_GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.prod  README.md  index.html  package-lock.json  package.json  paint.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend-v2/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  App.vue  App.vue.backup  index.css  style.css
infrastructure/: .env.example  README.md  docker-compose.override.yml.example  docker-compose.yml  redis.conf
infrastructure/profiles/: backend-only.yml  codespaces.yml  ghcr.yml  multi.yml  sample.yml  test.yml  validation.yml
notebooks/: 01_graph_basics.ipynb  02_centrality_analysis.ipynb  03_community_detection.ipynb  04_architectural_patterns.ipynb  05_ontology_extraction.ipynb  06_c4_diagram_generation.ipynb
notebooks/utils/: __init__.py  c4_builder.py  graph_client.py
quarantine/: test_mcp_http.py  test_redis_cache.py  test_sse_server.py
scripts/: codespaces-redis.sh  dev-server.sh  setup-ghcr.sh  test-codespaces.sh
src/code_graph_mcp/: cache_manager.py  cdc_manager.py  entry_detector.py  file_watcher.py  graph_query_router.py  http_server.py  language_router.py  memgraph_sync.py  query_router.py  redis_cache.py  seam_detector.py  server.py  sse_server.py  universal_ast.py  universal_graph.py  universal_parser.py  websocket_server.py
src/codenav/: __init__.py  entry_detector.py  http_server.py  (+5 more)
tests/: GRAPH_QUERY_ZERO_RESULTS_FIX.md  README.md  __init__.py  conftest.py  mcp_tools_test.py  run_tests.py  simple_test.py  test-requirements.txt  test_backend_graph_queries.py  test_calls_implementation.py  test_category_endpoints.py  test_cdc_manager.py  test_cdc_sync_validation.py  test_entry_detector.py  test_entry_points_endpoint.py  test_fixes.py  test_graph_api.py  test_graph_export.py  test_graph_queries.py  test_http_websocket_integration.py  test_ignore_patterns.py  test_imports_standalone.py  test_live_load_http.py  test_live_load_websocket.py  test_load_concurrent_connections.py  test_load_http_endpoints.py  test_mcp_client.py  test_mcp_connectivity.py  test_mcp_live_session.py  test_mcp_rustworkx_integration.py  test_mcp_server.py  test_mcp_tools.py  test_multi_language.py  test_parser_core.py  test_phase3_integration.py  test_phase3_minimal.py  test_phase3_validation.py  test_query_endpoints.py  test_query_router_validation.py  test_query_tools_live.py  (+9 more)
(+96 files in other folders)
