[project]
name = "code-graph-mcp"
version = "1.2.3"
description = "MCP server for multi-language code graph intelligence and analysis across 25+ programming languages"
readme = "README.md"
authors = [
    { name = "entrepeneur4lyf", email = "shawn.payments@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.2",
    "ast-grep-py>=0.39.0",
    "anyio>=4.0.0",
    "click>=8.0.0",
    "rustworkx>=0.15.0",
    "watchdog>=6.0.0",
    # SSE dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    # Redis cache dependencies
    "redis>=5.0.0",
    "msgpack>=1.0.0",
    "pathspec>=0.12.1",
]
keywords = [
    "mcp", "code-analysis", "ast", "claude-code", "graph", "intelligence", 
    "python", "code-quality", "complexity-analysis", "static-analysis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/entrepeneur4lyf/code-graph-mcp"
Repository = "https://github.com/entrepeneur4lyf/code-graph-mcp"
Documentation = "https://github.com/entrepeneur4lyf/code-graph-mcp#readme"
Changelog = "https://github.com/entrepeneur4lyf/code-graph-mcp/releases"
Issues = "https://github.com/entrepeneur4lyf/code-graph-mcp/issues"

[project.scripts]
code-graph-mcp = "code_graph_mcp:main"
code-graph-sse = "code_graph_mcp.sse_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_graph_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md", 
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
target-version = ["py312"]
line-length = 100

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "twine>=6.1.0",
]
