[project]
name = "codenav"
version = "0.5.0"
description = "CodeNavigator - MCP server for multi-language code graph intelligence and analysis across 25+ programming languages"
readme = "README.md"
authors = [
    { name = "entrepeneur4lyf", email = "shawn.payments@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    # Core analysis engine dependencies
    "ast-grep-py>=0.39.0",
    "rustworkx>=0.15.0",
    "networkx>=3.0",
    "pathspec>=0.12.1",
    "watchdog>=6.0.0",
    # Redis cache dependencies
    "redis>=5.0.0",
    "msgpack>=1.0.0",
    # Graph database support
    "neo4j>=5.0.0",
]
keywords = [
    "mcp", "code-analysis", "ast", "claude-code", "graph", "intelligence", 
    "python", "code-quality", "complexity-analysis", "static-analysis",
    "codenav", "codenavigator"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
# MCP server with stdio transport (most common, minimal deps)
mcp-stdio = [
    "mcp>=1.12.2",
    "anyio>=4.0.0",
    "click>=8.0.0",
]

# MCP server with streamableHttp transport
mcp-http = [
    "mcp>=1.12.2",
    "anyio>=4.0.0",
    "click>=8.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=2.0.0",
]

# All MCP options
mcp = [
    "codenav[mcp-stdio]",
    "codenav[mcp-http]",
]

# Web REST API server
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.24.0",
]

# Jupyter notebook support
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

# Everything
all = [
    "codenav[mcp]",
    "codenav[web]",
    "codenav[notebooks]",
    "codenav[dev]",
]

[project.urls]
Homepage = "https://github.com/ajacobm/codenav"
Repository = "https://github.com/ajacobm/codenav"
Documentation = "https://github.com/ajacobm/codenav#readme"
Changelog = "https://github.com/ajacobm/codenav/releases"
Issues = "https://github.com/ajacobm/codenav/issues"

[project.scripts]
codenav = "codenav:main"
codenav-web = "codenav.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codenav"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md", 
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
target-version = ["py312"]
line-length = 100

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "twine>=6.1.0",
]
